--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-12.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-12.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Burlington, IBD Stock Of The Day, Near Entry Amid Target Hikes, Holiday Sales	伯灵顿，今日 IBD 股票，在目标加息、假日销售中接近入场
+  Burlington, IBD Stock Of The Day, Near Entry Amid Target Hikes, Holiday Sales
 image: /assets/img/stock-of-the-day/2024-12-12.jpg
 date: 2024-12-12 13:42 -0800
 author: HARRISON MILLER
@@ -12,104 +12,84 @@ author: HARRISON MILLER
 
 
 
-Burlington Stores, among this year's fastest-rising retailers like **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)),  is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Thursday. Shares have received a number of price-target hikes in the wake of Burlington's Q3 earnings report and Black Friday.  
-伯灵顿商店是沃尔**玛** （[WMT）](https://research.investors.com/quote.aspx?symbol=WMT) 等今年增长最快的零售商之一，是周四的 [IBD 每日股票](https://www.investors.com/research/ibd-stock-of-the-day/)。在伯灵顿第三季度财报和黑色星期五之后，股价已多次上调目标价。
+Burlington Stores, among this year's fastest-rising retailers like **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)),  is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) for Thursday. Shares have received a number of price-target hikes in the wake of Burlington's Q3 earnings report and Black Friday.
 
 
 
 
-**Burlington** ([BURL](https://research.investors.com/quote.aspx?symbol=BURL)) on Nov. 26 reported a 41% increase in Q3 earnings to $1.55 per share adjusted to meet FactSet expectations. Total revenue rose about 11% to $2.53 billion, short of estimates for $2.55 billion.  
+**Burlington** ([BURL](https://research.investors.com/quote.aspx?symbol=BURL)) on Nov. 26 reported a 41% increase in Q3 earnings to $1.55 per share adjusted to meet FactSet expectations. Total revenue rose about 11% to $2.53 billion, short of estimates for $2.55 billion.
 
 
-CEO Michael O'Sullivan noted that third-quarter comparable-sales trends started out "very strongly" for the company's winter outerwear stronghold. But warmer weather starting in mid-September slowed sales momentum. However, comparable sales were up 4% during the quarter if cold weather categories were excluded, which represented 15% of sales for Q3.  
+CEO Michael O'Sullivan noted that third-quarter comparable-sales trends started out "very strongly" for the company's winter outerwear stronghold. But warmer weather starting in mid-September slowed sales momentum. However, comparable sales were up 4% during the quarter if cold weather categories were excluded, which represented 15% of sales for Q3.
 
 
-The comp growth is consistent with the trajectory Burlington has seen since March, O'Sullivan said, adding that the company is "very encouraged" by the underlying sales trend.  
-O'Sullivan 表示，公司的增长与 Burlington 自 3 月以来的轨迹一致，并补充说，该公司对潜在的销售趋势“非常鼓舞”。
+The comp growth is consistent with the trajectory Burlington has seen since March, O'Sullivan said, adding that the company is "very encouraged" by the underlying sales trend.
 
 
-"The agility with which we operated during the quarter has left us in a strong inventory position, which has us well poised for the holiday season," O'Sullivan said. At the time, he added that November was off to a good start, and that he was optimistic about prospects for the fourth quarter.  
-O'Sullivan 说：“我们在本季度运营的敏捷性使我们处于强大的库存状况，这让我们为假期做好了充分的准备。当时，他补充说，11 月是一个良好的开端，他对第四季度的前景持乐观态度。
+"The agility with which we operated during the quarter has left us in a strong inventory position, which has us well poised for the holiday season," O'Sullivan said. At the time, he added that November was off to a good start, and that he was optimistic about prospects for the fourth quarter.
 
 
-Meanwhile, Black Friday on Nov. 29 flashed some strong signs for retailers, according to Mastercard.  
-与此同时，据万事达卡称，11 月 29 日的黑色星期五为零售商带来了一些强烈的迹象。
+Meanwhile, Black Friday on Nov. 29 flashed some strong signs for retailers, according to Mastercard.
 
 
-[Mastercard's SpendingPulse reported](https://www.investors.com/news/lululemon-retail-stocks-break-out-black-friday-sales-earnings-macys-burl-five/) that Black Friday retail sales rose 3.4% compared with last year, not adjusted for inflation. Online retail sales increased 14.6% vs. last year, while in-store sales ticked up 0.7%, according to Mastercard. Data indicates that jewelry, electronics and apparel remain the top gift sectors for the holidays. Mastercard noted there was particular strength in e-commerce apparel shopping during Black Friday.  
-[万事达卡的 SpendingPulse 报告称](https://www.investors.com/news/lululemon-retail-stocks-break-out-black-friday-sales-earnings-macys-burl-five/)，黑色星期五零售额与去年相比增长了 3.4%，未根据通货膨胀进行调整。根据万事达卡的数据，在线零售额比去年增长了 14.6%，而店内销售额增长了 0.7%。数据显示，珠宝、电子产品和服装仍然是节日期间最受欢迎的礼品行业。万事达卡指出，在黑色星期五期间，电子商务服装购物尤其强劲。
+[Mastercard's SpendingPulse reported](https://www.investors.com/news/lululemon-retail-stocks-break-out-black-friday-sales-earnings-macys-burl-five/) that Black Friday retail sales rose 3.4% compared with last year, not adjusted for inflation. Online retail sales increased 14.6% vs. last year, while in-store sales ticked up 0.7%, according to Mastercard. Data indicates that jewelry, electronics and apparel remain the top gift sectors for the holidays. Mastercard noted there was particular strength in e-commerce apparel shopping during Black Friday.
 
 
-"Black Friday was a good indicator of how the holiday season is positively shaping up," Michelle Meyer, chief economist at the Mastercard Economics Institute, said in the release. "Consumers are comfortably in the gift-giving spirit as price reductions and deals occur across sectors, supporting budgets for holiday shopping."  
-“黑色星期五是一个很好的指标，表明假日季是如何积极形成的，”万事达卡经济研究所首席经济学家米歇尔·迈耶 （Michelle Meyer） 在新闻稿中表示。“消费者对送礼的精神感到很舒服，因为各行各业都会发生降价和交易，从而支持假日购物的预算。”
+"Black Friday was a good indicator of how the holiday season is positively shaping up," Michelle Meyer, chief economist at the Mastercard Economics Institute, said in the release. "Consumers are comfortably in the gift-giving spirit as price reductions and deals occur across sectors, supporting budgets for holiday shopping."
 
 
-Steve Sadove, senior advisor for Mastercard, added that "shoppers are making the most of seasonal deals and enjoying a balance of experiences spending and gifts for all loved ones. They're more strategic in their shopping though, prioritizing promotions that they believe hold the greatest value — opening their wallets, but with more intentional distribution."  
-万事达卡高级顾问史蒂夫·萨多夫 （Steve Sadove） 补充说：“购物者正在充分利用季节性优惠，并在消费体验和为所有亲人送礼之间取得平衡。不过，他们在购物时更具策略性，优先考虑他们认为具有最大价值的促销活动——打开钱包，但更有意识地分发。
+Steve Sadove, senior advisor for Mastercard, added that "shoppers are making the most of seasonal deals and enjoying a balance of experiences spending and gifts for all loved ones. They're more strategic in their shopping though, prioritizing promotions that they believe hold the greatest value — opening their wallets, but with more intentional distribution."
 
 
-Burlington Outlook 伯灵顿展望
-------------------------
-
-
-Still, the discount retailer provided cautious guidance for the fourth quarter, expecting comparable-sales growth to range from 0% to 2%.  
-尽管如此，这家折扣零售商对第四季度提供了谨慎的指导，预计可比销售额增长将在 0% 至 2% 之间。
-
-
-Telsey Advisory in a Nov. 27 research note called the Q3 results a "bit of a mixed bag," The Fly reported. However, there was improvement in November as temperatures cooled and the firm expects underlying trends to remain solid. Telsey raised its price target on BURL stock by 10 to 320 and kept an outperform rating on shares.  
-据 The Fly 报道，Telsey Advisory 在 11 月 27 日的一份研究报告中称第三季度的结果“有点喜忧参半”。然而，随着气温降温，11 月有所改善，该公司预计基本趋势将保持稳定。Telsey 将 BURL 股票的目标价上调 10 至 320，并保持对股票的跑赢大盘评级。
-
-
-Evercore ISI also said that it sees no change in Burlington's long-term story, and that the weather impact on comparable sales is not "a true indicator of the progress being made." Evercore lifted its price target on Burlington to 340 from 315 and maintained an outperform rating on the stock.  
-Evercore ISI 还表示，它认为伯灵顿的长期发展没有变化，而且天气对可比销售额的影响并不是“正在取得进展的真正指标”。Evercore 将伯灵顿的目标价从 315 上调至 340，并维持对该股的跑赢大盘评级。
-
-
-Elsewhere, Goldman Sachs on Dec. 2 added Burlington to its U.S. Conviction List as part of its monthly update. Goldman wrote that the retailer is ideally positioned for today's economy thanks to its value offering. Meanwhile, the retailer should benefit from sequentially strengthening low-income consumers, as well as high-end consumers trading down. The firm has a buy rating and 334 price target for Burlington stock.  
-在其他地方，高盛（Goldman Sachs）于12月2日将伯灵顿列入其美国定罪名单，作为其月度更新的一部分。Goldman 写道，由于其价值产品，该零售商在当今经济中处于理想的位置。与此同时，零售商应该会受益于低收入消费者的环比走强，以及高端消费者的降价。该公司对伯灵顿股票的评级为买入，目标价为 334。
-
-
-BURL Stock BURL 库存
+Burlington Outlook
 ------------------
 
 
-
-Burlington eased about 1.4% Thursday.  
-伯灵顿周四下跌约 1.4%。
+Still, the discount retailer provided cautious guidance for the fourth quarter, expecting comparable-sales growth to range from 0% to 2%.
 
 
-BURL stock is in a [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) from a 279.51 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a [cup-with-handle](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/) base after breaking out on Nov. 22. Shares have edged higher for nearly three weeks. All of those weeks topped out just above 298, creating a [shelf](https://www.investors.com/how-to-invest/investors-corner/what-is-a-shelf-pattern-and-why-it-is-perfect-pyramiding-tool-in-growth-stocks/) pattern with an entry at 298.88.  
-BURL 股票在 11 月 22 日突破后，从带[手柄](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/)杯底部的 279.51 [买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)处于[买入区域](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/)。股价已连续近三周小幅走高。所有这些周都略高于 298，形成了[一个货架](https://www.investors.com/how-to-invest/investors-corner/what-is-a-shelf-pattern-and-why-it-is-perfect-pyramiding-tool-in-growth-stocks/)模式，入场价为 298.88。
+Telsey Advisory in a Nov. 27 research note called the Q3 results a "bit of a mixed bag," The Fly reported. However, there was improvement in November as temperatures cooled and the firm expects underlying trends to remain solid. Telsey raised its price target on BURL stock by 10 to 320 and kept an outperform rating on shares.
 
 
-Burlington has rallied 67% from its 2024 low from April. The stock is up about 49% so far this year and trading at its highest level since December 2021.  
-伯灵顿从 4 月份的 2024 年低点上涨了 67%。该股今年迄今上涨了约 49%，交易价格为 2021 年 12 月以来的最高水平。
+Evercore ISI also said that it sees no change in Burlington's long-term story, and that the weather impact on comparable sales is not "a true indicator of the progress being made." Evercore lifted its price target on Burlington to 340 from 315 and maintained an outperform rating on the stock.
 
 
-*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)  
-您可以在 X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison) 上关注 Harrison Miller 以获取更多股票新闻和更新*
+Elsewhere, Goldman Sachs on Dec. 2 added Burlington to its U.S. Conviction List as part of its monthly update. Goldman wrote that the retailer is ideally positioned for today's economy thanks to its value offering. Meanwhile, the retailer should benefit from sequentially strengthening low-income consumers, as well as high-end consumers trading down. The firm has a buy rating and 334 price target for Burlington stock.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+BURL Stock
+----------
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
-最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+
+Burlington eased about 1.4% Thursday.
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
-寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+BURL stock is in a [buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) from a 279.51 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) for a [cup-with-handle](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/) base after breaking out on Nov. 22. Shares have edged higher for nearly three weeks. All of those weeks topped out just above 298, creating a [shelf](https://www.investors.com/how-to-invest/investors-corner/what-is-a-shelf-pattern-and-why-it-is-perfect-pyramiding-tool-in-growth-stocks/) pattern with an entry at 298.88.
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
-加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+Burlington has rallied 67% from its 2024 low from April. The stock is up about 49% so far this year and trading at its highest level since December 2021.
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+*You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)*
 
 
-[Market Backs Off Highs; Two AI Chip Plays Flash Buy Signals  
-市场从高位回落;两个 AI 芯片播放闪电买入信号](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-ai-chip-plays-arm-broadcom-flash-buy-signals/)
+**YOU MAY ALSO LIKE:**
+
+
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+
+
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+
+
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Market Backs Off Highs; Two AI Chip Plays Flash Buy Signals](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-ai-chip-plays-arm-broadcom-flash-buy-signals/)
 
 
 
