--- a/_columns/The_Big_Picture/2024-12-11.md
+++ b/_columns/The_Big_Picture/2024-12-11.md
@@ -10,8 +10,135 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
+The consumer price index rode to the rescue Wednesday after the report met forecasts and motivated buyers to come off the sidelines. The Nasdaq climbed above 20,000 for the first time, putting a decorative bow on the stock market today.
 
-The consumer price index rode to the rescue Wednesday after the report met forecasts and motivated buyers to come off the sidelines. The Nasdaq climbed above 20,000 for the first time, putting a decorative bow on the stock market today. The Nasdaq led the stock market with a 1.8% gain. The composite snapped a two-day decline and climbed to a…
 
-[Sign In](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-nasdaq-20000-sp500-dow-jones-cpi%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
+The Nasdaq led the stock market with a 1.8% gain. The composite snapped a two-day decline and climbed to a record close at 20,034.
+
+
+The S&P 500 rose 0.8%, despite a fade in the final half-hour of the session, to also end a short two-day losing streak.
+
+
+
+
+**Alphabet**'s ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) 5.5% rally and **Tesla**'s ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) 6% romp to new highs shepherded the Nasdaq to its historic milestone. **Nvidia**'s ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) 3.1% jaunt and 2%-plus gains **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were valuable contributors, too. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), however, reversed lower.
+
+
+Certainly, big caps carried much of the buying power. Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund rose 3% and iShares Top 20 U.S. Stocks ([TOPT](https://research.investors.com/quote.aspx?symbol=TOPT)) added 1.4%.
+
+
+By comparison, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) faded to a 0.1% increase.
+
+
+Breadth was better in the Nasdaq 100. First Trust Nasdaq 100 Equal Weight ([QQEW](https://research.investors.com/quote.aspx?symbol=QQEW)) rose 0.9%.
+
+
+Dow Lags Stock Market
+---------------------
+
+
+Overall, advancing stocks topped decliners by a 9-8 ratio on the New York Stock Exchange and by a narrower margin on the Nasdaq. Volume rose on the NYSE but fell the Nasdaq.
+
+
+![](https://www.investors.com/wp-content/uploads/2024/12/MP121124.jpg)The Dow Jones Industrial Average was directionless and lagged with a 0.2% loss. **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) accounted for most of the Dow's damage. The health insurance provider resumed a sell-off with a 5.6% loss. Shares also closed below the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/).
+
+
+In small caps, the Russell 2000 bounced 0.5%. More importantly, it found support at its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).
+
+
+Wednesday's rally helped broaden participation in the stock market's advance. The Nasdaq and NYSE advance-decline lines had edged below their 10-day moving averages earlier this week.
+
+
+Longer-term, about 150 of IBD's 197 industry groups are trading above their [50-day moving averages](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). That's commensurate with a bullish stock market trend and IBD's recommended exposure of 80%-100%.
+
+
+Leading growth stocks — which had slumped this week — behaved much better Wednesday. Many rebounded, albeit modestly. **Hut 8** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) bounced off its 21-day line after falling 15% the prior two days. **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) found support at its 21-day line, too. **Affirm Holdings** ([AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)) erased all of Tuesday's 3.6% loss.
+
+
+The IBD 50 index rebounded 1.9%. It found support at its 21-day exponential moving average.
+
+
+Leaders That Declined
+---------------------
+
+
+Still, there were plenty of current leaders that suffered troubling declines, including **Duolingo** ([DUOL](https://research.investors.com/quote.aspx?symbol=DUOL)), **Toll Brothers** ([TOL](https://research.investors.com/quote.aspx?symbol=TOL)), **Veeva Systems** ([VEEV](https://research.investors.com/quote.aspx?symbol=VEEV)) and **Northern Trust** ([NTRS](https://research.investors.com/quote.aspx?symbol=NTRS)). Duolingo, which BofA Securities downgraded, found support at the 10-week line, however.
+
+
+Among those left behind were value stocks. The iShares Russell 1000 Value ETF ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) fell 0.2% for its eight consecutive drop. The growth-index counterpart, by contrast, rose 1.7%. Growth has maintained a lead over value this year, up 37% vs. 17% for the value index.
+
+
+Five of the 15 worst performing industry groups were in health care, including hospitals and long-term care providers. Further, Health Care Select Sector SPDR ([XLV](https://research.investors.com/quote.aspx?symbol=XLV)) was the weakest of the S&P 500 sectors, down 1.4%.
+
+
+In Congress, lawmakers introduced a bill that would force companies that own health insurers or pharmacy-benefit managers to [divest their pharmacy businesses](https://www.wsj.com/politics/policy/warren-hawley-health-insurers-pbm-bill-c8cdeb85?mod=hp_lead_pos6). UnitedHealth would be among those impacted.
+
+
+Market Likes CPI Report
+-----------------------
+
+
+Buyers lined up outside the Wall Street's doors before the opening bell, after the November consumer price index rose 2.7% on a 12-month basis. That was the consensus forecast among economists, while other CPI gauges also matched estimates.
+
+
+
+
+---
+
+
+[See The Latest Updates To IBD Watchlists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+
+
+
+
+---
+
+
+Although November data showed progress on inflation had slowed, the stock market was encouraged.
+
+
+Traders are nearly unanimous in [expecting a quarter-point interest rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html) at next week's Federal Reserve meeting. Odds rose to 95% Wednesday.
+
+
+The 10-year Treasury yield added five basis points to 4.27%.
+
+
+Are Rate Cuts Still In The Cards?
+---------------------------------
+
+
+Economists generally agreed that CPI effectively gave the green light for another rate cut. Yet, some expressed concerns about underlying numbers.
+
+
+Lara Castleton, U.S. Head of Portfolio Construction and Strategy at Janus Henderson Investors, cautioned that recent upticks in inflation will make it hard for the Fed to achieve a straightforward continuation of rate cuts in 2025.
+
+
+"Reignition of inflation is one of the top concerns for clients next year, particularly surrounding uncertainty of policy proposals in the next administration, and while this print shouldn't force that reality to interrupt the holiday season, investors should be wary of impacts higher inflation might have on their portfolios and be prepared accordingly," Castleton said in a note to media organizations.
+
+
+And Brian Coulton, chief economist at Fitch Ratings, noted that core inflation momentum – the three-month-on-three-month annualized rate – rose again to 3.4% and is running above the year-on-year rate of 3.3%.
+
+
+"The decline in core goods prices – which was a big part of the overall disinflation story this year – looks to be over," he added.
+
+
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121124.pdf)
+
+
+**YOU MAY ALSO LIKE:**
+
+
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+
+
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+
+
+[Nasdaq Tops 20,000 As Tesla, Titans Surge; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-tops-20000-tesla-hits-high/)
+
+
+
 
