--- a/_columns/The_Big_Picture/2024-12-12.md
+++ b/_columns/The_Big_Picture/2024-12-12.md
@@ -10,8 +10,150 @@ author: SCOTT LEHTONEN
 
 
 
+Small-cap stocks underperformed Thursday as the Dow Jones Industrial Average extended a losing streak to six sessions — its longest since April.
 
-Small-cap stocks underperformed Thursday as the Dow Jones Industrial Average extended a losing streak to six sessions — its longest since April. The Dow Jones industrials and S&P 500 both dropped 0.5%, while the tech-heavy Nasdaq composite lost 0.7%. The Russell 2000 index sold off 1.4%. Volume rose on the Nasdaq, and was lower on the New York Stock Exchange…
 
-[Sign In](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fdow-jones-sp500-nasdaq-small-cap-stocks%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
+The Dow Jones industrials and S&P 500 both dropped 0.5%, while the tech-heavy Nasdaq composite lost 0.7%. The Russell 2000 index sold off 1.4%.
+
+
+
+
+Volume rose on the Nasdaq, and was lower on the New York Stock Exchange from Wednesday's session. That created a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the Nasdaq, taking its count to three, which matches the S&P 500's distribution.
+
+
+While that number remains tolerable, bears clearly were in control. Declining stocks topped advancers by nearly 3-to-1 on the NYSE and by about 13-to-5 on the Nasdaq, according to FactSet.
+
+
+This week delivered two inflation reports that pretty much cleared the path for a [Federal Reserve rate cut](https://www.investors.com/news/economy/federal-reserve-rate-cut-cpi-ppi-jobless-claims-sp-500/) next week. And policymakers are going to feel much better about cutting rates after Thursday's producer price index, which was hot on the surface but showed tepid inflation in health care services and other categories that feed into the Fed's primary inflation rate.
+
+
+While a rate cut was already virtually a done deal for the Dec. 18 Fed meeting, Thursday's data including a jump in initial jobless claims, lowered the risk that Fed policymakers will offer a hawkish forecast for rate cuts next year when they update quarterly projections next week.
+
+
+
+
+---
+
+
+[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+
+
+
+
+---
+
+
+Dow Jones Winners And Losers
+----------------------------
+
+
+In the Dow Jones index, **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) and **Merck** ([MKR](https://research.investors.com/quote.aspx?symbol=MKR)) were the top performers Thursday, with gains of 1.9% and 1.5%, respectively.
+
+
+On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) sold off 3.3% and 2.1%, respectively. Their combined point loss was nearly 159 points. **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) also cost the Dow nearly 43 points.
+
+
+The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) fell 0.8%. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched all-time highs, but reversed lower to snap a six-day win streak.
+
+
+The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund declined 1.2%. Despite that, [the IBD 50](https://research.investors.com/stock-lists/ibd-50/) had a number of solid winners on the session, including bitcoin stock **Hut 8 Mining** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) and **Robinhood Markets** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)).
+
+
+
+
+---
+
+
+[**After Getting Dethroned By Apple, Nvidia Faces This New Threat**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
+
+
+
+
+---
+
+
+What Investors Should Do Now
+----------------------------
+
+
+![market pulse](https://www.investors.com/wp-content/uploads/2024/12/MP121224-261x300.jpg)
+
+
+With the Nasdaq setting another record high this week, and the S&P 500 holding just off its own highs, IBD maintains its recommended exposure level at 80%-100%.
+
+
+However, there is weaker-than-ideal breadth, with the S&P 500's recent gains much stronger compared with its equal-weighted counterpart, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) ETF. While the S&P is down 0.6% this week, the equal-weight index is down 1.3%.
+
+
+Meanwhile, Direxion Nasdaq-100 Equal Weighted ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) failed to hit a new high this week, contrary to QQQ's action. This shows there could be some weakness beneath the surface.
+
+
+Ten of the 11 S&P 500 sectors ended lower, with consumer discretionary, health care and communication services falling the most. Consumer staples was the only rising sector on the day.
+
+
+That means investors should be utilizing diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). It's important to monitor positions that are acting out of character and sell any stocks that trigger sell rules.
+
+
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)). The Near Pivot list has four stock ideas, and one is Dow Jones media giant **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)), which is approaching a 118.63 buy point.
+
+
+
+
+---
+
+
+[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+
+
+
+
+---
+
+
+Stocks Market Leaders: AppFolio, BlackRock, Manhattan
+-----------------------------------------------------
+
+
+Stock market leaders to watch include **AppFolio** ([APPF](https://research.investors.com/quote.aspx?symbol=APPF)), **BlackRock** ([BLK](https://research.investors.com/quote.aspx?symbol=BLK)) and Manhattan Associates.
+
+
+
+AppFolio stock is rapidly nearing a 273 [handle entry](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) following a big rally from the Oct. 24 low, per [IBD MarketSurge chart analysis.](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) AppFolio's cloud-based property management platform includes an artificial intelligence leasing assistant. It features tenant screening, electronic payment, utility management, maintenance contact center and tenant debt collection.
+
+
+BlackRock slipped 0.6% Thursday, falling below a 1,068.34 entry in a four-weeks-tight pattern. [Last week](https://www.investors.com/research/ibd-stock-of-the-day/blackrock-stock-bitcoin-etf/), as the bitcoin price crossed above $100,000, BlackRock's iShares Bitcoin ETF ([IBIT](https://research.investors.com/quote.aspx?symbol=IBIT)) surpassed $50 billion in assets, more than double the size of its nearest ETF competitor.
+
+
+Manhattan Associates rallied 3% Thursday, breaking out past a 306.63 cup-with-handle entry. Atlanta-based Manhattan develops software tools for supply chains, including warehouse management. The stock has gained roughly 38% this year, outpacing a 26.9% gain for the S&P 500. That's after shares jumped 77% in 2023, helped by momentum in the company's shift to [subscription-based software sales.](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)
+
+
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121224.pdf).
+
+
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
+
+
+
+
+**YOU MAY ALSO LIKE:**
+
+
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+
+
+
+
+
 
