--- a/_columns/The_Big_Picture/zh-cn/2024-12-11.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-11.md
@@ -10,9 +10,164 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
+The consumer price index rode to the rescue Wednesday after the report met forecasts and motivated buyers to come off the sidelines. The Nasdaq climbed above 20,000 for the first time, putting a decorative bow on the stock market today.  
+周三，消费者价格指数（CPI）在报告符合预期并促使买家退出后出手相救。纳斯达克指数首次攀升至 20,000 点以上，为今天的股市画上了一枚装饰性的蝴蝶结。
 
-The consumer price index rode to the rescue Wednesday after the report met forecasts and motivated buyers to come off the sidelines. The Nasdaq climbed above 20,000 for the first time, putting a decorative bow on the stock market today. The Nasdaq led the stock market with a 1.8% gain. The composite snapped a two-day decline and climbed to a…  
-周三，消费者价格指数（CPI）在报告符合预期并促使买家退出后出手相救。纳斯达克指数首次攀升至 20,000 点以上，为今天的股市画上了一枚装饰性的蝴蝶结。纳斯达克指数以 1.8% 的涨幅领跑股市。该综合指数结束了为期两天的下跌并攀升至...
 
-[Sign In 登录](https://myibd.investors.com/secure/signin.aspx?as=paywall&eurl=https%3A%2F%2Fwww.investors.com%2Fmarket-trend%2Fthe-big-picture%2Fstock-market-nasdaq-20000-sp500-dow-jones-cpi%2F)[![](https://www.investors.com/wp-content/uploads/2018/06/Paywall-Patch_shadow2.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ)[![](https://www.investors.com/wp-content/uploads/2018/06/Mobile_paywall-1-1.png)](http://shop.investors.com/products/offerselection.aspx?cmpn=ICA_N_20INTRO&intcode=paywall%7Chrdpaywall%7Cna%7C2020%7Cna%7Cibdd%7Cna%7C%7C718738&src=APAFBQ) 
+The Nasdaq led the stock market with a 1.8% gain. The composite snapped a two-day decline and climbed to a record close at 20,034.  
+纳斯达克指数以 1.8% 的涨幅领跑股市。该综合指数结束了为期两天的下跌，并攀升至创纪录的收盘价 20,034 点。
+
+
+The S&P 500 rose 0.8%, despite a fade in the final half-hour of the session, to also end a short two-day losing streak.  
+标准普尔 500 指数上涨 0.8%，尽管在交易的最后半小时有所回落，但也结束了短暂的两天连跌。
+
+
+
+
+**Alphabet**'s ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) 5.5% rally and **Tesla**'s ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) 6% romp to new highs shepherded the Nasdaq to its historic milestone. **Nvidia**'s ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) 3.1% jaunt and 2%-plus gains **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) were valuable contributors, too. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)), however, reversed lower.  
+**Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 上涨 5.5%，**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 上涨 6%，创下新高，引领纳斯达克指数达到历史里程碑。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 3.1% 的涨幅和 2% 以上的涨幅**Meta Platforms** （[META](https://research.investors.com/quote.aspx?symbol=META)） 和 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 也是有价值的贡献者。然而，**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 则反转走低。
+
+
+Certainly, big caps carried much of the buying power. Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund rose 3% and iShares Top 20 U.S. Stocks ([TOPT](https://research.investors.com/quote.aspx?symbol=TOPT)) added 1.4%.  
+当然，大盘股拥有大部分购买力。Roundhill Magnificent Seven （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 交易所交易基金上涨 3%，iShares Top 20 美国股票 （[TOPT）](https://research.investors.com/quote.aspx?symbol=TOPT) 上涨 1.4%。
+
+
+By comparison, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) faded to a 0.1% increase.  
+相比之下，Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 的涨幅降至 0.1%。
+
+
+Breadth was better in the Nasdaq 100. First Trust Nasdaq 100 Equal Weight ([QQEW](https://research.investors.com/quote.aspx?symbol=QQEW)) rose 0.9%.  
+纳斯达克 100 指数的广度更好。First Trust 纳斯达克 100 等权重指数 （[QQEW）](https://research.investors.com/quote.aspx?symbol=QQEW) 上涨 0.9%。
+
+
+Dow Lags Stock Market 道琼斯股市落后
+-----------------------------
+
+
+Overall, advancing stocks topped decliners by a 9-8 ratio on the New York Stock Exchange and by a narrower margin on the Nasdaq. Volume rose on the NYSE but fell the Nasdaq.  
+总体而言，纽约证券交易所上涨的股票以 9：8 的比率领先于下跌的股票，在纳斯达克的涨幅较小。纽约证券交易所的成交量上升，但纳斯达克的成交量下跌。
+
+
+![](https://www.investors.com/wp-content/uploads/2024/12/MP121124.jpg)The Dow Jones Industrial Average was directionless and lagged with a 0.2% loss. **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) accounted for most of the Dow's damage. The health insurance provider resumed a sell-off with a 5.6% loss. Shares also closed below the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/).  
+道琼斯工业平均指数没有方向，下跌 0.2%。**UnitedHealth Group** （[UNH）](https://research.investors.com/quote.aspx?symbol=UNH) 对道琼斯指数的大部分损失负责。这家健康保险提供商以 5.6% 的跌幅恢复抛售。股价也收于 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-provide-effective-tool-for-your-trading/)下方。
+
+
+In small caps, the Russell 2000 bounced 0.5%. More importantly, it found support at its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).  
+小盘股方面，罗素 2000 指数反弹 0.5%。更重要的是，它在 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)找到了支撑。
+
+
+Wednesday's rally helped broaden participation in the stock market's advance. The Nasdaq and NYSE advance-decline lines had edged below their 10-day moving averages earlier this week.  
+周三的反弹有助于扩大对股市上涨的参与度。本周早些时候，纳斯达克和纽约证券交易所的涨跌线曾小幅低于其 10 天移动平均线。
+
+
+Longer-term, about 150 of IBD's 197 industry groups are trading above their [50-day moving averages](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). That's commensurate with a bullish stock market trend and IBD's recommended exposure of 80%-100%.  
+从长远来看，IBD 的 197 个行业组中约有 150 个的交易价格高于其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)。这与看涨的股市趋势和 IBD 建议的 80%-100% 的风险敞口相称。
+
+
+Leading growth stocks — which had slumped this week — behaved much better Wednesday. Many rebounded, albeit modestly. **Hut 8** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) bounced off its 21-day line after falling 15% the prior two days. **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) found support at its 21-day line, too. **Affirm Holdings** ([AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)) erased all of Tuesday's 3.6% loss.  
+本周暴跌的领先成长股周三的表现要好得多。许多股票价格有所反弹，尽管幅度不大。**Hut 8** （[HUT](https://research.investors.com/quote.aspx?symbol=HUT)） 在前两天下跌 21% 后从 15 日线反弹。**Lemonade** （[LMND）](https://research.investors.com/quote.aspx?symbol=LMND) 也在其 21 日线找到支撑。**Affirm Holdings** （[AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)） 抹去了周二 3.6% 的所有损失。
+
+
+The IBD 50 index rebounded 1.9%. It found support at its 21-day exponential moving average.  
+IBD 50 指数反弹 1.9%。它在 21 天指数移动平均线找到支撑。
+
+
+Leaders That Declined 拒绝的领导者
+----------------------------
+
+
+Still, there were plenty of current leaders that suffered troubling declines, including **Duolingo** ([DUOL](https://research.investors.com/quote.aspx?symbol=DUOL)), **Toll Brothers** ([TOL](https://research.investors.com/quote.aspx?symbol=TOL)), **Veeva Systems** ([VEEV](https://research.investors.com/quote.aspx?symbol=VEEV)) and **Northern Trust** ([NTRS](https://research.investors.com/quote.aspx?symbol=NTRS)). Duolingo, which BofA Securities downgraded, found support at the 10-week line, however.  
+尽管如此，仍有许多当前的领先企业遭遇了令人不安的下滑，包括 **Duolingo** （[DUOL](https://research.investors.com/quote.aspx?symbol=DUOL)）、**Toll Brothers** （[TOL](https://research.investors.com/quote.aspx?symbol=TOL)）、**Veeva Systems** （[VEEV](https://research.investors.com/quote.aspx?symbol=VEEV)） 和 **Northern Trust** （[NTRS）。](https://research.investors.com/quote.aspx?symbol=NTRS)然而，美银证券下调评级的 Duolingo 在 10 周线找到支撑。
+
+
+Among those left behind were value stocks. The iShares Russell 1000 Value ETF ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) fell 0.2% for its eight consecutive drop. The growth-index counterpart, by contrast, rose 1.7%. Growth has maintained a lead over value this year, up 37% vs. 17% for the value index.  
+被抛在后面的是价值股。iShares Russell 1000 Value ETF （[IWD](https://research.investors.com/quote.aspx?symbol=IWD)） 连续八次下跌 0.2%。相比之下，增长指数上涨 1.7%。今年，增长指数保持领先于价值指数，上涨 37%，而价值指数为 17%。
+
+
+Five of the 15 worst performing industry groups were in health care, including hospitals and long-term care providers. Further, Health Care Select Sector SPDR ([XLV](https://research.investors.com/quote.aspx?symbol=XLV)) was the weakest of the S&P 500 sectors, down 1.4%.  
+在表现最差的 15 个行业组中，有 5 个是医疗保健行业，包括医院和长期护理提供商。此外，医疗保健精选板块 SPDR （[XLV](https://research.investors.com/quote.aspx?symbol=XLV)） 是标准普尔 500 指数板块中最弱的，下跌 1.4%。
+
+
+In Congress, lawmakers introduced a bill that would force companies that own health insurers or pharmacy-benefit managers to [divest their pharmacy businesses](https://www.wsj.com/politics/policy/warren-hawley-health-insurers-pbm-bill-c8cdeb85?mod=hp_lead_pos6). UnitedHealth would be among those impacted.  
+在国会，立法者提出了一项法案，将迫使拥有健康保险公司或药房福利管理公司的公司[剥离其药房业务](https://www.wsj.com/politics/policy/warren-hawley-health-insurers-pbm-bill-c8cdeb85?mod=hp_lead_pos6)。UnitedHealth 将是受影响的人之一。
+
+
+Market Likes CPI Report 市场喜欢 CPI 报告
+-----------------------------------
+
+
+Buyers lined up outside the Wall Street's doors before the opening bell, after the November consumer price index rose 2.7% on a 12-month basis. That was the consensus forecast among economists, while other CPI gauges also matched estimates.  
+在开盘钟声响起之前，买家在华尔街的门外排起了长队，此前 11 月消费者价格指数在 12 个月的基础上上涨了 2.7%。这是经济学家的一致预测，而其他 CPI 指标也与估计相符。
+
+
+
+
+---
+
+
+[See The Latest Updates To IBD Watchlists  
+查看 IBD 观察列表的最新更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+
+
+
+
+---
+
+
+Although November data showed progress on inflation had slowed, the stock market was encouraged.  
+尽管 11 月数据显示通胀进展放缓，但股市受到鼓舞。
+
+
+Traders are nearly unanimous in [expecting a quarter-point interest rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html) at next week's Federal Reserve meeting. Odds rose to 95% Wednesday.  
+交易员几乎一致预计美联储将在下周的会议上[降息 25 个基点](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)。周三赔率上升到 95%。
+
+
+The 10-year Treasury yield added five basis points to 4.27%.  
+10 年期美国国债收益率上涨 5 个基点至 4.27%。
+
+
+Are Rate Cuts Still In The Cards?降息仍然在考虑之中吗？
+--------------------------------------------
+
+
+Economists generally agreed that CPI effectively gave the green light for another rate cut. Yet, some expressed concerns about underlying numbers.  
+经济学家普遍认为，CPI 实际上为再次降息开了绿灯。然而，一些人对基本数字表示担忧。
+
+
+Lara Castleton, U.S. Head of Portfolio Construction and Strategy at Janus Henderson Investors, cautioned that recent upticks in inflation will make it hard for the Fed to achieve a straightforward continuation of rate cuts in 2025.  
+骏利亨德森投资美国投资组合构建和策略主管 Lara Castleton 警告称，近期通胀上升将使美联储难以在 2025 年直接继续降息。
+
+
+"Reignition of inflation is one of the top concerns for clients next year, particularly surrounding uncertainty of policy proposals in the next administration, and while this print shouldn't force that reality to interrupt the holiday season, investors should be wary of impacts higher inflation might have on their portfolios and be prepared accordingly," Castleton said in a note to media organizations.  
+Castleton 在给媒体机构的一份报告中表示：“通胀的重新点燃是客户明年最关心的问题之一，尤其是围绕下一届政府政策建议的不确定性，虽然这份数据不应迫使这一现实打断假期，但投资者应该警惕更高的通胀可能对其投资组合产生的影响，并做好相应的准备。
+
+
+And Brian Coulton, chief economist at Fitch Ratings, noted that core inflation momentum – the three-month-on-three-month annualized rate – rose again to 3.4% and is running above the year-on-year rate of 3.3%.  
+惠誉评级（Fitch Ratings）首席经济学家布莱恩·库尔顿（Brian Coulton）指出，核心通胀势头——三个月环比年化率——再次上升至3.4%，高于3.3%的同比率。
+
+
+"The decline in core goods prices – which was a big part of the overall disinflation story this year – looks to be over," he added.  
+他补充说：“核心商品价格的下跌——这是今年整体通货紧缩故事的重要组成部分——似乎已经结束。
+
+
+[View General Market Indicators chart page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121124.pdf)
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+
+
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+
+
+[Nasdaq Tops 20,000 As Tesla, Titans Surge; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-tops-20000-tesla-hits-high/)
+
+
+
 
